#1298 closed bug (fixed)
Restarting input_server is broken
Reported by: | meanwhile | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Servers/app_server | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
Download UniversalScroller (http://www.bebits.com/app/1359), click install.sh and input_server will no longer work.
Change History (10)
comment:1 by , 18 years ago
comment:2 by , 18 years ago
If having US's source available can help fixing this, I can send it for scrutiny...
comment:3 by , 18 years ago
I would assume it locks up the input_server. To check this, run something that displays an animation, like the bitmap drawing demo, or just see if the clock keeps updating. Several possibilities:
- The input_server restarting is not implemented correctly
- input_server does not restart correctly - or
- app_server does not pick up the new input_server, maybe even locks up
- Having UniversalScroller in the input_server add-ons folder crashes the input_server, even on startup. To check this, place the add-on in the folder from another OS and boot Haiku with the add-on already in place.
Can you investigate in these directions and update the bug report? That would save some time. Thanks a lot!
comment:4 by , 18 years ago
Sorry for having been inaccurate: instead of locking up the entire OS, it just freezes the cursor...the clock ticks on and the bitmap drawing demo draws on. When trying out keyboard input -in this state- through a Ctrl-Alt-Del there was no Team Monitor window showing up. That this puts it into a different perspective may be proven by the fact that putting UniversalScroller into boot/beos/system/add-ons/input_server/devices/filters from the outside (through BeOS on another partition), doesn't affect Haiku on (next) boot or thereafter.
I'll be more accurate/careful in Ticket descriptions from now on...
comment:5 by , 18 years ago
Thank you very much for your additional research! No worries please, there was nothing wrong with your original bug report! My comment about "saving time" was only meant that you would help me with the additional info, not that the report should have contained it in the first place!
Thanks a lot again, I think I know what to look at now (input_server restart). But I won't have time immediately, so anyone reading this, feel free to jump in!
comment:6 by , 18 years ago
Description: | modified (diff) |
---|
comment:7 by , 18 years ago
Summary: | UniversalScroller locks up system → Restarting input_server is broken |
---|
comment:8 by , 17 years ago
Component: | - General → Servers/app_server |
---|---|
Status: | new → assigned |
Sorry forgot to mention: this was done on hrev21624.