The wonders of signals: * Since the app_server launched the input_server, it would also get notified   when the latter died via a signal - but LinkReceiver could return B_INTERRUPTED   in that case (it didn't check the return value of port_buffer_size()) which   the app_server misinterpreted and quit itself... this fixes the hanging part   of bug #1298. * But the input_server still wasn't restarted, because the Registrar had it   still listed as being running. Now, the Registrar checks not just periodically   for died teams, it will also check for it when a new application registers   itself. This fixes the rest of bug #1298. * Removed the old (disabled) R5 style input_server launch mechanism from the   app_server. * MessageLooper now prints a bit more information when a port is supposed to   have been deleted. * The default implementation of MessageLooper::_GetLooperName() is now   returning the name of the semaphore of its BLocker instead of "unnamed   looper".

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@22115 a95241bf-73f2-0310-859d-f6bbb57e9c96