src/servers/registrar/RosterAppInfo.h
@@ -1,29 +1,7 @@
-//------------------------------------------------------------------------------
-//	Copyright (c) 2001-2002, OpenBeOS
-//
-//	Permission is hereby granted, free of charge, to any person obtaining a
-//	copy of this software and associated documentation files (the "Software"),
-//	to deal in the Software without restriction, including without limitation
-//	the rights to use, copy, modify, merge, publish, distribute, sublicense,
-//	and/or sell copies of the Software, and to permit persons to whom the
-//	Software is furnished to do so, subject to the following conditions:
-//
-//	The above copyright notice and this permission notice shall be included in
-//	all copies or substantial portions of the Software.
-//
-//	THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-//	IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-//	FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-//	AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-//	LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
-//	FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
-//	DEALINGS IN THE SOFTWARE.
-//
-//	File Name:		RosterAppInfo.h
-//	Author:			Ingo Weinhold (bonefish@users.sf.net)
-//	Description:	An extended app_info.
-//------------------------------------------------------------------------------
-
+/*
+ * Copyright 2001-2007, Ingo Weinhold, bonefish@users.sf.net.
+ * Distributed under the terms of the MIT License.
+ */
 #ifndef ROSTER_APP_INFO_H
 #define ROSTER_APP_INFO_H
 
@@ -45,9 +23,10 @@ struct RosterAppInfo : app_info {
 
 	RosterAppInfo();
 	void Init(thread_id thread, team_id team, port_id port, uint32 flags,
-			  const entry_ref *ref, const char *signature);
+		const entry_ref *ref, const char *signature);
 
 	RosterAppInfo *Clone() const;
+	bool IsRunning() const;
 };
 
 #endif	// ROSTER_APP_INFO_H
